--- a/Over_CNN/CNN_vd341n.ipynb
+++ b/Over_CNN/CNN_vd341n.ipynb
@@ -372,12 +372,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b29030c-b868-4555-9686-e88363c21edc",
+   "cell_type": "markdown",
+   "id": "a4cec652",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Computational Considerations\n",
+    "\n",
+    "The largest bottleneck to be aware of when constructing ConvNet architectures is the memory bottleneck. Many modern GPUs have a limit of 3/4/6GB memory, with the best GPUs having about 12GB of memory. There are three major sources of memory to keep track of:\n",
+    "\n",
+    "- From the intermediate volume sizes: These are the raw number of activations at every layer of the ConvNet, and also their gradients (of equal size). Usually, most of the activations are on the earlier layers of a ConvNet (i.e. first Conv Layers). These are kept around because they are needed for backpropagation, but a clever implementation that runs a ConvNet only at test time could in principle reduce this by a huge amount, by only storing the current activations at any layer and discarding the previous activations on layers below.\n",
+    "- From the parameter sizes: These are the numbers that hold the network parameters, their gradients during backpropagation, and commonly also a step cache if the optimization is using momentum, Adagrad, or RMSProp. Therefore, the memory to store the parameter vector alone must usually be multiplied by a factor of at least 3 or so.\n",
+    "- Every ConvNet implementation has to maintain miscellaneous memory, such as the image data batches, perhaps their augmented versions, etc.\n",
+    "\n",
+    "Once you have a rough estimate of the total number of values (for activations, gradients, and misc), the number should be converted to size in GB. Take the number of values, multiply by 4 to get the raw number of bytes (since every floating point is 4 bytes, or maybe by 8 for double precision), and then divide by 1024 multiple times to get the amount of memory in KB, MB, and finally GB. If your network doesn’t fit, a common heuristic to “make it fit” is to decrease the batch size, since most of the memory is usually consumed by the activations.\n",
+    "\n",
+    "## Additional Resources\n",
+    "\n",
+    "Additional resources related to implementation:\n",
+    "\n",
+    "- [Soumith benchmarks for CONV performance](https://github.com/soumith/convnet-benchmarks)\n",
+    "- [ConvNetJS CIFAR-10 demo](https://cs.stanford.edu/people/karpathy/convnetjs/demo/cifar10.html) allows you to play with ConvNet architectures and see the results and computations in real time, in the browser.\n",
+    "- [Caffe](http://caffe.berkeleyvision.org/), one of the popular ConvNet libraries.\n",
+    "- [State of the art ResNets in Torch7](http://torch.ch/blog/2016/02/04/resnets.html)\n"
+   ]
   }
  ],
  "metadata": {
